# HypnoSquid_prototype

./: CMakeLists.txt  README.md  hypnosquid.puml  modules.puml
HypnoSquid.Core/: CMakeLists.txt
HypnoSquid.Core/include/: HypnoSquid.Core.hh
HypnoSquid.Core/include/HypnoSquid.Core/: SystemMainLoop.hh
HypnoSquid.Core/src/: SystemMainLoop.cc
HypnoSquid.Engine/: CMakeLists.txt
HypnoSquid.Engine/include/: HypnoSquid.hh
HypnoSquid.Engine/include/HypnoSquid/: ComponentStore.hh  ComponentStoreListener.hh  ComponentStoreListenerBuilder.hh  Engine.hh  Entity.hh  EntitySet.hh  IComponent.hh  IEntityCollection.hh  IMessage.hh  ISystem.hh  MessageBus.hh  MessageBusListener.hh  MessageBusListenerBuilder.hh  World.hh  metadata.hh  utility.hh
HypnoSquid.Engine/src/: ComponentStore.cc  Engine.cc  EntitySet.cc  World.cc
HypnoSquid.Game/: CMakeLists.txt
HypnoSquid.Game/src/: main.cc
